JDK11 support (#1274)